<package>
  <name>tf2_web_republisher</name>
  <version>0.1.1</version>
  <description>
    This package republishes throttled and quantized tf messages to be transmitted to a ros-bridge web-client
  </description>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <author email="jkammerl@willowgarage.com">Julius Kammer</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf</run_depend>

</package>

